fix: remove scrollbar while menu is active & add z-index to menu

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,6 +4,8 @@
 
   overflow: auto;
 
+  z-index: 1;
+
   &__content {
     @include content-padding-inline;
 
