--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,12 @@ a {
   color: black;
 }
 
+body {
+  &:has(.menu:target) {
+    overflow: hidden;
+  }
+}
+
 input, textarea, select {
   &:-webkit-autofill {
     &, &:hover, &:focus {
